<resources>
    <string name="app_name">Active Transportation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_time_and_location">Time and Location</string>
    <string name="title_activity_notify">Notification</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_reenter_password">Re-enter password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_contact_info">contactInfoActivity</string>
    <string name="action_register">register</string>
    <string name="parent">Parent</string>
    <string name="staff">Staff</string>
</resources>
